===========================================================================
MARK: released gwenhywfar-0.9.6 (2004/02/15)
===========================================================================

2004-02-13  Christian Stimming <stimming@tuhh.de>

	* src/parser/xml.h: Improved documentation: Clarified the
	comparison to XML notation/naming scheme, which is different from
	Gwen's notation.

2004-02-04  Christian Stimming <stimming@tuhh.de>

	* src/os/windows/libloader.c, src/os/posix/libloader.c: Fix
	errornous query for .so/.dll suffix.

2004/02/02: Ronny Buchmann <ronny-hbci@vlugnet.org>
---------------------------------------------------
- Makefile.cvs: make /usr/local in local: a variable

2004-01-28  Christian Stimming <stimming@tuhh.de>

	* test/gwentest.c, configure.ac: Add define to remove dependency
	on openssl in test program (for --disable-ssl).
	
	* Makefile.am: Add target "make quick" that generates the
	auto-generated headers first. This saves duplicated compilation.

	* m4/acx_windows_paths.m4: Renamed windoze.m4 to this file. Added
	caching of the directory values because this saves a lot of time.
	
	* README.W32: Add explanation of helpful configure options.

	* src/Makefile.am: Add LDFLAGS to DLLFLAGS since this is needed on
	some windows configurations.

2004-01-27  Christian Stimming <stimming@tuhh.de>

	* m4/ssl.m4: Use WIN_PATH_SYSTEM_MINGW for windows.
	* configure.ac: Also allow version autoconf-2.56. If this breaks
	anything, then of course the change should be reverted.
	Also use WIN_PATH_SYSTEM_MINGW for gwenhyfar_libraries.
	
	
2004/01/26: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added a note about CVS usability to STYLE file


2004/01/25: Ronny Buchmann <ronny-hbci@vlugnet.org>
---------------------------------------------------
- remove autogenerated files


2004/01/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------